# pipewire-to-json

./: .gitignore  README.md  default.nix  main.c  meson.build  meson_options.txt  test.sh
.github/workflows/: test.yml
